vix/tests/checker-corpus/reject/unknown-argument.vix
fn add(x: Int) -> Int {
    x
}

fn main() -> Int {
    add(y: 1)
}
